Incorrect url fix

--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -18,7 +18,7 @@ However, if a Validator node prevents the consensus group from performing its ta
 
 :::info
 
-Be sure to first review the [Validator Technical Requirements](http://localhost:3000/mine-hnt/validators/requirements)
+Be sure to first review the [Validator Technical Requirements](/mine-hnt/validators/requirements)
 
 :::
 
