--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -110,7 +110,7 @@ Through these rules, the penalties help maintain the the goals of the Validator 
 
 ## Viewing Your Penalties
 
-There are a couple tools available to you to view the current penalties of your validator, all validators, or ones currently elected to the consensus group.
+There are a several tools available to you to view the current penalties of your validator, all validators, or ones currently elected to the consensus group.
 
 **Viewing the Ledger**
 
