--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -22,6 +22,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 				<a href="/use-the-network/devices/ready-to-use/"><span class="badge badge--secondary">Helium-enabled Devices</span></a>
 				<a href="/use-the-network/console/quickstart"><span class="badge badge--secondary">Console Explained</span></a>
 				<a href="/use-the-network/community-projects#dashboards"><span class="badge badge--secondary">Dashboard Projects</span></a>	
+				<a href="/use-the-network/build-a-packet-forwarder"><span class="badge badge--secondary">Packet Forwarder</span></a>
 			</div>
                 </div>
             </div>
