--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -1,8 +1,44 @@
 ---
 id: development
 hide_title: true
-sidebar_label: Introduction
+sidebar_label: Manufacturers
 slug: /use-the-network/devices/development
 ---
 
-## Development Devices
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<div class="container" style={{padding: 0, marginBottom: 60}}>
+	<div class="row">
+        <div class="col col--12">
+            <div class="flex" style={{border: 'none'}}>
+                 <img className="headericon" src={useBaseUrl("img/use-the-network/use1.svg")} />
+                <div className="headertext">
+                    <h1 style={{marginTop:0}}>Development Devices</h1>
+			<h2 className="subtitle">Development Device Manufaturers</h2>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
+
+<div class="container" style={{padding: 0}}>
+	<div class="row">
+		<div class="col col--6"  style={{marginBottom: 100}}>
+	    	<img className="homeicon" src={useBaseUrl("img/use-the-network/devices/development/adafruit/adafruit-logo.png")} />
+	    	<h3>Adafruit</h3>
+	    	<p className="podtext">Adafruit</p>
+	    	<h5>Devices</h5>
+	    	<a className="block" href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Feather M0 RFM95</a>
+	    </div>
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+	    	<img className="homeicon" src={useBaseUrl("img/use-the-network/devices/development/arduino/arduino-logo.png")} />
+	    	<h3>Arduino</h3>
+	    	<p className="podtext">Arduino</p>
+	    	<h5>Devices</h5>
+	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+            <a className="block" href="/use-the-network/devices/development/arduino/mkr-wan-1310"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> MKR WAN 1310</a>
+	    </div>
+  	</div>
+</div>
+
+
