Basic datacake documentation

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -40,6 +40,8 @@ attaching them to devices and integrations. \(See more instructions here.\)
 
 [Cargo](/use-the-network/console/integrations/cargo)
 
+[Datacake](/use-the-network/console/integrations/datacake)
+
 [MyDevices Cayenne](/use-the-network/console/integrations/mydevices-cayenne)
 
 [Adafruit IO](/use-the-network/console/integrations/adafruitio)
