moved existing heltec into heltec dir

--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board/cubecell-dev-board.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board/cubecell-dev-board.mdx
@@ -1,5 +1,5 @@
 ---
-id: cubecell-dev-board
+id: cubecell-dev-board 
 hide_title: true
 title: HTCC-AB01
 description:
@@ -14,19 +14,22 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## HTCC-AB01
 
-HTCC-AB01 is a Dev-Board. Friendly designed for developers, easy to verify
-communication solutions.
-
 <img
   src={useBaseUrl(
     "img/use-the-network/devices/development/heltec/cubecell-dev-board.png"
   )}
 />
 
+## Introduction
+
+The Heltec Cubecell HTCC AB01 is Heltec's popular ASR605x(ARM® Cortex® M0+ Core)
+based LoRa development board with built in USB and battery charging.
+
 ### Resources
 
 - [Product Page](https://heltec.org/project/htcc-ab01/)
-- [Datasheet](https://heltec.org/project/htcc-ab01/#1552557147424-7f1ec-5c652144-e1d6)
+- [Manual](https://heltec-automation-docs.readthedocs.io/en/latest/cubecell/index.html)
+- [US Retailer - Parley Labs](https://shop.parleylabs.com/collections/heltec-cubecell)
 
 ### Specifications
 
@@ -41,7 +44,7 @@ communication solutions.
 - type: Lithium
 - replaceable: True
 
----
+### Firmware Quickstart Guides
 
-Content generated from
-[LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
+- [Arduino Guide](/use-the-network/devices/development/heltec/cubecell-dev-board/arduino)
+- [PlatformIO Guide](/use-the-network/devices/development/heltec/cubecell-dev-board/platformio)
