--- a/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/wifi-lora-32-v2.mdx
+++ b/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/wifi-lora-32-v2.mdx
@@ -1,11 +1,8 @@
 ---
-id: wifi-lora-32
+id: wifi-lora-32-v2
 hide_title: true
-title: WiFi LoRa 32 (V2)
-description: WiFi LoRa 32 is a classic IoT dev-board
-image: img/use-the-network/devices/development/heltec/wifi-lora-32.png
-sidebar_label: WiFi LoRa 32 (V2)
-slug: /use-the-network/devices/development/heltec/wifi-lora-32
+sidebar_label: WiFi LoRa 32 V2
+slug: /use-the-network/devices/development/heltec/wifi-lora-32-v2
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -23,7 +20,7 @@ WiFi LoRa 32 is a classic IoT dev-board
 ### Resources
 
 - [Product Page](https://heltec.org/project/wifi-lora-32/)
-- [Datasheet](https://heltec.org/project/wifi-lora-32/#1552557147424-7f1ec-5c65)
+- [Manual](https://heltec-automation-docs.readthedocs.io/en/latest/esp32/quick_start.html)
 
 ### Specifications
 
@@ -38,7 +35,6 @@ WiFi LoRa 32 is a classic IoT dev-board
 - type: Lithium
 - replaceable: True
 
----
+### Firmware Quickstart Guides
 
-Content generated from
-[LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
+[Arduino Guide](/use-the-network/devices/development/heltec/wifi-lora-32-v2/arduino)
