completed the rest of dev devices

--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
                  <img className="headericon" src={useBaseUrl("img/use-the-network/use1.svg")} />
                 <div className="headertext">
                     <h1 style={{marginTop:0}}>Development Devices</h1>
-			<h2 className="subtitle">Development Device Manufaturers</h2>
+			<h2 className="subtitle">Manufacturers</h2>
                 </div>
             </div>
         </div>
@@ -25,81 +25,53 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	<div class="row">
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/adafruit/adafruit-logo.png")} />
-	    	{/* <h3>Adafruit</h3>
-	    	<p className="podtext">Adafruit</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Feather M0 RFM95</a>
+			<p></p>
+			<a href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/arduino/arduino-logo.png")} />
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
-            <a className="block" href="/use-the-network/devices/development/arduino/mkr-wan-1310"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> MKR WAN 1310</a>
+			<p></p>
+			<a href="/use-the-network/devices/development/arduino/lora-vision-shield"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/embit/embit-logo.png")} />
-	    	<h5>Devices</h5>
-			<a className="block" href="/use-the-network/devices/development/embit/emb-lr1280s"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> EMB-LR1280S</a>
-			<a className="block" href="/use-the-network/devices/development/embit/emb-lrwl55"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> EMB-LRW155</a>
+			<p></p>
+			<a href="/use-the-network/devices/development/embit/emb-lr1280s"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/heltec/heltec-logo.png")} />
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AB02A </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-capsule-sensor"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AC01 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-dev-board-plus"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AB02 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-dev-board"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AB01 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-gps-6502"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AB02S </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-module-plus"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AM02 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-module"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AM01 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/cubecell-solar-sensor"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> HTCC-AC02 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/lora-kit-151"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Kit 151 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/lora-node-151"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Node 151 </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/turtle-board"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Turtle Board </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/wifi-lora-32-v2"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> WiFi LoRa 32(V2) </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/wireless-shell"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Wireless Shell </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/wireless-stick-lite"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Wireless Stick Lite </a>
-			<a className="block" href="/use-the-network/devices/development/heltec/wireless-stick"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Wireless Stick </a>
+			<p></p>
+			<a href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/mcci/mcci-logo.png")} />
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+			<p></p>
+			<a href="/use-the-network/devices/development/mcci/catena4610"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/midatronics/midatronics-logo.png")} />
-	    	{/* <h3>Midatronics</h3>
-	    	<p className="podtext">Midatronics</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+	    	<p></p>
+			<a href="/use-the-network/devices/development/midatronics/sharky-module"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>	
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/multi-tech/multi-tech-logo.webp")} />
-	    	{/* <h3>Multi-Tech</h3>
-	    	<p className="podtext">Multi-Tech</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+	    	<p></p>
+			<a href="/use-the-network/devices/development/multi-tech/multi-tech-xdot"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/rakwireless/rakwireless-logo.png")} />
-	    	{/* <h3>RAK Wireless</h3>
-	    	<p className="podtext">RAK Wireless</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+	    	<p></p>
+			<a href="/use-the-network/devices/development/rakwireless/wisblock-4631"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/sparkfun/sparkfun-logo.png")} />
-	    	{/* <h3>Sparkfun</h3>
-	    	<p className="podtext">Sparkfun</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+	    	<p></p>
+			<a href="/use-the-network/devices/development/sparkfun/pro-rf"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/stmicroelectronics/stmicroelectronics-logo.png")} />
-	    	{/* <h3>STMicroelectronics</h3>
-	    	<p className="podtext">STMicroelectronics</p> */}
-	    	<h5>Devices</h5>
-	    	<a className="block" href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRa Vision Shield</a>
+	    	<p></p>
+			<a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
   	</div>
 </div>
