--- a/docs/use-the-network/devices/development/sparkfun/pro-rf/pro-rf.mdx
+++ b/docs/use-the-network/devices/development/sparkfun/pro-rf/pro-rf.mdx
@@ -1,8 +1,8 @@
 ---
-id: sparkfun-pro-rf
+id: pro-rf
 hide_title: true
 sidebar_label: Sparkfun Pro RF
-slug: /use-the-network/devices/development/sparkfun-pro-rf
+slug: /use-the-network/devices/development/sparkfun/pro-rf
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -31,4 +31,4 @@ or experienced in utilizing long range data communication.
 
 ### Firmware Quickstart Guides
 
-[Arduino Guide](/use-the-network/devices/development/sparkfun-pro-rf/arduino)
+[Arduino Guide](/use-the-network/devices/development/sparkfun/pro-rf/arduino)
