--- a/docs/use-the-network/devices/development/rakwireless/wisblock-4631/wisblock-4631.mdx
+++ b/docs/use-the-network/devices/development/rakwireless/wisblock-4631/wisblock-4631.mdx
@@ -25,9 +25,25 @@ series.
   )}
 />
 
+## Introduction
+
+Here you will find one or more sample PlatformIO embedded projects designed to
+transmit LoRaWAN packets using a
+[RAK Wireless WisBlock Starter Kit](https://store.rakwireless.com/products/wisblock-starter-kit).
+The starter kit is just that, a base developer board that can have multiple
+combinations of expansion boards added to it. The full WisBlock offering can be
+seen [here](https://store.rakwireless.com/pages/wisblock).
+
 ### Resources
 
-- [Product Page](https://docs.rakwireless.com/Product-Categories/WisBlock/RAK4631/Overview/)
+[WisBlock Product Page](https://store.rakwireless.com/products/wisblock-starter-kit)  
+[WisBlock Documentation](https://docs.rakwireless.com/Product-Categories/WisBlock/)  
+[US Retailer - Parley Labs](https://shop.parleylabs.com)
+
+### Firmware Quickstart Guides
+
+- [Arduino Guide](/use-the-network/devices/development/rakwireless/wisblock-4631/arduino)
+- [PlatformIO Guide](/use-the-network/devices/development/rakwireless/wisblock-4631/platformio)
 
 ### Specifications
 
@@ -44,8 +60,3 @@ series.
 
 - type: Li-Ion / Li-Po, 1024 mAh minimum capacity, JST connector
 - replaceable: True
-
----
-
-Content generated from
-[LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
