--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -24,52 +24,52 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 <div class="container" style={{padding: 0}}>
 	<div class="row">
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/adafruit/adafruit-logo.png")} />
+	    	<a href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/adafruit/adafruit-logo.png")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/arduino/arduino-logo.png")} />
+	    	<a href="/use-the-network/devices/development/arduino/lora-vision-shield"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/arduino/arduino-logo.png")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/development/arduino/lora-vision-shield"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/embit/embit-logo.png")} />
+	    	<a href="/use-the-network/devices/development/embit/emb-lr1280s"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/embit/embit-logo.png")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/development/embit/emb-lr1280s"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/heltec/heltec-logo.png")} />
+	    	<a href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/heltec/heltec-logo.png")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/mcci/mcci-logo.png")} />
+	    	<a href="/use-the-network/devices/development/mcci/catena4610"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/mcci/mcci-logo.png")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/development/mcci/catena4610"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/midatronics/midatronics-logo.png")} />
+	    	<a href="/use-the-network/devices/development/midatronics/sharky-module"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/midatronics/midatronics-logo.png")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/midatronics/sharky-module"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>	
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/multi-tech/multi-tech-logo.webp")} />
+	    	<a href="/use-the-network/devices/development/multi-tech/multi-tech-xdot"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/multi-tech/multi-tech-logo.webp")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/multi-tech/multi-tech-xdot"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/rakwireless/rakwireless-logo.png")} />
+	    	<a href="/use-the-network/devices/development/rakwireless/wisblock-4631"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/rakwireless/rakwireless-logo.png")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/rakwireless/wisblock-4631"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/sparkfun/sparkfun-logo.png")} />
+	    	<a href="/use-the-network/devices/development/sparkfun/pro-rf"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/sparkfun/sparkfun-logo.png")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/sparkfun/pro-rf"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/stmicroelectronics/stmicroelectronics-logo.png")} />
+	    	<a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/stmicroelectronics/stmicroelectronics-logo.png")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
