--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -35,7 +35,7 @@ Once you have your [Helium CLI Wallet](https://github.com/helium/helium-wallet-r
 
 :::warning
 
-It is best practice to not create your Helium CLI wallet on the same machine you're using for your Validator. We advise you do not do this.
+It is a best practice to create your Helium CLI wallet on a separate machine from the one where you will run your Validator.
 
 :::
 
