--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -8,7 +8,7 @@ slug: /faq/build-on-network
 
 # FAQ - Build On Network
 
-### I want to use the Helium Network for my IoT project, how do I learn more?
+### I want to use the Helium Network for my IoT project. How do I learn more?
 Thanks for your interest! Check out or join the community Discord server as there are several channels dedicated to development. There’s also a ton of documentation on development and use for you, ready to peruse here: https://docs.helium.com/use-the-network
 
 ### Can end devices communicate directly with each other or do they have to hop over the Helium Hotspot?
@@ -22,4 +22,3 @@ We use sub-ghz unlicensed spectrum which varies country by country.  You can als
 
 ### What kind of data rates do you anticipate going from device to the hotspot?
 The applications we’re targeting for traffic typically within 5 kbps.
-
