--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -9,7 +9,7 @@ slug: /faq/build-on-network
 # FAQ - Build On Network
 
 ### I want to use the Helium Network for my IoT project. How do I learn more?
-Thanks for your interest! Check out or join the community Discord server as there are several channels dedicated to development. There’s also a ton of documentation on development and use for you, ready to peruse here: https://docs.helium.com/use-the-network
+Thanks for your interest! Join the [community Discord server](https://discord.gg/helium) as there are several channels dedicated to development. There’s also [extensive documentation on using the Network](https://docs.helium.com/use-the-network). 
 
 ### Can end devices communicate directly with each other or do they have to hop over the Helium Hotspot?
 All compatible devices communicate via hotspots. There is no direct communication or meshing in our network.
