--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -12,7 +12,7 @@ slug: /faq/build-on-network
 Thanks for your interest! Join the [community Discord server](https://discord.gg/helium) as there are several channels dedicated to development. There’s also [extensive documentation on using the Network](https://docs.helium.com/use-the-network). 
 
 ### Can end devices communicate directly with each other or do they have to hop over the Helium Hotspot?
-All compatible devices communicate via hotspots. There is no direct communication or meshing in our network.
+All compatible devices communicate via Hotspots. There is no direct communication or meshing in the Helium Network.
 
 ### Will Helium be proprietary?
 We believe proprietary protocols and technologies stifle innovation. This is why we use commodity, open-standard hardware, and modules available from dozens of vendors. Even our software is open-sourced. Check out our Open-Sourced documentation.
