--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -15,7 +15,7 @@ Thanks for your interest! Join the [community Discord server](https://discord.gg
 All compatible devices communicate via Hotspots. There is no direct communication or meshing in the Helium Network.
 
 ### Will Helium be proprietary?
-We believe proprietary protocols and technologies stifle innovation. This is why we use commodity, open-standard hardware, and modules available from dozens of vendors. Even our software is open-sourced. Check out our Open-Sourced documentation.
+We believe proprietary protocols and technologies stifle innovation. This is why we use commodity, open-standard hardware, and modules available from dozens of vendors. And all software used is [open source under friendly licenses](https://docs.helium.com/open-source/open-source/#helium-is-open-source).
 
 ### Which frequencies does the Helium Hotspot use? Are you evaluating other frequencies in different countries?
 We use sub-ghz unlicensed spectrum which varies country by country.  You can also view the frequency used per country here: https://docs.helium.com/lorawan-on-helium/frequency-plans/
