--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -18,7 +18,7 @@ All compatible devices communicate via Hotspots. There is no direct communicatio
 We believe proprietary protocols and technologies stifle innovation. This is why we use commodity, open-standard hardware, and modules available from dozens of vendors. And all software used is [open source under friendly licenses](https://docs.helium.com/open-source/open-source/#helium-is-open-source).
 
 ### Which frequencies does the Helium Hotspot use? Are you evaluating other frequencies in different countries?
-We use sub-ghz unlicensed spectrum which varies country by country.  You can also view the frequency used per country here: https://docs.helium.com/lorawan-on-helium/frequency-plans/
+Hotspots create LoRaWAN coverage, which sub-ghz unlicensed spectrum that varies country by country.  You can [view the frequency used per country here](https://docs.helium.com/lorawan-on-helium/frequency-plans).
 
 ### What kind of data rates do you anticipate going from device to the hotspot?
 The applications we’re targeting for traffic typically within 5 kbps.
