--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -11,10 +11,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::warning
 
-The ability to mine HNT with anything other than
-[Approved Hotspots](https://helium.com/mine) is not supported. Please join the
-#diy-packet-forwarder in the [Helium Discord Server](https://discord.gg/helium)
-for the latest updates.
+The ability to earn from [PoC](https://docs.helium.com/blockchain/proof-of-coverage) with anything other than an [Approved Hotspot](https://helium.com/mine) 
+is not supported. Packet forwarders are designed for sensor developers to test usage without needing a hotspot. If your interested in using the Helium network and earning from data transfer from your existing hardware, please check out the [Light Gateways Roadmap](https://docs.helium.com/mine-hnt/light-hotspots/).
 
 :::
 
