--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -21,4 +21,4 @@ We believe proprietary protocols and technologies stifle innovation. This is why
 Hotspots create LoRaWAN coverage, which sub-ghz unlicensed spectrum that varies country by country.  You can [view the frequency used per country here](https://docs.helium.com/lorawan-on-helium/frequency-plans).
 
 ### What kind of data rates do you anticipate going from device to the hotspot?
-The applications we’re targeting for traffic typically within 5 kbps.
+Applications that are suitable for the Helium Network send small amounts of data. The maximum amount possible is around 5kbits per second. But this is rarely seen in production. Typically sensors are sending 10-1000 bytes at a time.
