--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -10,7 +10,7 @@ slug: /faq/data-credits
 
 ### Data Credits are required to send data over the Helium Network.
  
-If you’re a Hotspot owner, you generally do not need to worry about Data Credits unless you also plan to build sensors/devices to transmit data.  Data Credits used for transaction fees, adding miners, and asserting location, are burned automatically through the app from the available HNT in your wallet.  No additional steps are needed! (Read more on this Implicit Burn here)
+If you’re a Hotspot owner, you generally do not need to worry about [Data Credits](/blockchain/helium-token/#data-credits-and-burn-and-mint-economics) unless you also plan to build sensors and devices to transmit data.  Data Credits are [used to pay all transaction fees](/blockchain/transaction-fees/#transaction-fees) such as adding Hotspots, sending HNT, and asserting location. When needed, they are burned automatically through the app from the available HNT in your wallet and can also be burned via the CLI.  
  
 One Data Credit equals 24 bytes of payload. Any number that exceeds 24 bytes is rounded up, so a packet with a 25-byte payload would cost the same as one with 47 bytes, i.e., two Data Credits.
  
