--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -8,7 +8,7 @@ slug: /faq/data-credits
 
 # FAQ - Data Credits
 
-### Data Credits are required to send data over the Helium Network.
+### What are Data Credits? Do I need them?
  
 If you’re a Hotspot owner, you generally do not need to worry about [Data Credits](/blockchain/helium-token/#data-credits-and-burn-and-mint-economics) unless you also plan to build sensors and devices to transmit data.  Data Credits are [used to pay all transaction fees](/blockchain/transaction-fees/#transaction-fees) such as adding Hotspots, sending HNT, and asserting location. When needed, they are burned automatically through the app from the available HNT in your wallet and can also be burned via the CLI.  
  
