--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -12,7 +12,7 @@ slug: /faq/data-credits
  
 If you’re a Hotspot owner, you generally do not need to worry about [Data Credits](/blockchain/helium-token/#data-credits-and-burn-and-mint-economics) unless you also plan to build sensors and devices to transmit data.  Data Credits are [used to pay all transaction fees](/blockchain/transaction-fees/#transaction-fees) such as adding Hotspots, sending HNT, and asserting location. When needed, they are burned automatically through the app from the available HNT in your wallet and can also be burned via the CLI.  
  
-One Data Credit equals 24 bytes of payload. Any number that exceeds 24 bytes is rounded up, so a packet with a 25-byte payload would cost the same as one with 47 bytes, i.e., two Data Credits.
+One Data Credit pays for 24 bytes of LoRaWAN payload. Any number that exceeds 24 bytes is rounded up, so a packet with a 25-byte payload would cost the same as one with 47 bytes -  two Data Credits.
  
 The price of Data Credits is fixed in USD. Data Credits are non-transferrable, and can only be used by their original owner. Data Credits cannot be re-sold or traded. Data Credits are similar to pre-paid cellphone minutes or airline miles.
  
