--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -14,6 +14,6 @@ If you’re a Hotspot owner, you generally do not need to worry about [Data Cred
  
 One Data Credit pays for 24 bytes of LoRaWAN payload. Any number that exceeds 24 bytes is rounded up, so a packet with a 25-byte payload would cost the same as one with 47 bytes -  two Data Credits.
  
-The price of Data Credits is fixed in USD. Data Credits are non-transferrable, and can only be used by their original owner. Data Credits cannot be re-sold or traded. Data Credits are similar to pre-paid cellphone minutes or airline miles.
+Although Data Credits are produced by burning HNT, the price of Data Credits is fixed in USD. Data Credits are non-transferrable, and can only be used by their original owner. Data Credits cannot be re-sold or traded. Data Credits are similar to pre-paid cellphone minutes or airline miles.
  
 While this is a quick summary of what Data Credits are, click here for a more detailed view of Data Credit economics.
