--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -9,7 +9,7 @@ slug: /faq/helium-network
 # FAQ - Helium Network
 
 ### Does this replace the Wi-Fi in my house?
-No, the Helium Hotspot uses Long-Fi broadcasts a radio signal, connecting low-power devices in your area that need to transmit data....devices such as GPS trackers, environmental sensors etc. that only need to transmit and share small bits of information (like a location or temperature). It uses your existing internet to connect to peers over on the Helium network and deliver the data packets sent by devices.  It does not replace internet or cellular service for regular devices like computers and smartphones.
+No. The Helium Hotspot creates a Long-Fi radio signal and routes packets from low-power devices in your area that use LoRaWAN and have been deployed to the Helium Network. Typically these are devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to transmit and share small bits of information. The Hotspot uses your existing Internet (via WiFi or Ethernet) to deliver the data packets sent by devices.  It does not replace internet or cellular service for regular devices like computers and smartphones.
  
 ### Can I connect my phone or computer to Hotspots?
 No you can't. The network is meant for transferring small amounts of data at this time.  
