--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -12,7 +12,7 @@ slug: /faq/helium-network
 No. The Helium Hotspot creates a Long-Fi radio signal and routes packets from low-power devices in your area that use LoRaWAN and have been deployed to the Helium Network. Typically these are devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to transmit and share small bits of information. The Hotspot uses your existing Internet (via WiFi or Ethernet) to deliver the data packets sent by devices.  It does not replace internet or cellular service for regular devices like computers and smartphones.
  
 ### Can I connect my phone or computer to Hotspots?
-No you can't. The network is meant for transferring small amounts of data at this time.  
+No. The network is only meant devices that use LoRaWAN.
   
 ### What devices can use the network?
 Everything from asset trackers, to soil sensors in farms, to tracking the water level of bottles in water coolers. Anyone can use LongFi, which works on existing IoT hardware, to create lots of different products. 
