--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -15,7 +15,7 @@ No. The Helium Hotspot creates a Long-Fi radio signal and routes packets from lo
 No. The network is only meant devices that use LoRaWAN.
   
 ### What devices can use the network?
-Everything from asset trackers, to soil sensors in farms, to tracking the water level of bottles in water coolers. Anyone can use LongFi, which works on existing IoT hardware, to create lots of different products. 
+Anything that sends data via LoRaWAN. This means everything from asset trackers, to soil sensors in farms, to tracking the water level of bottles in water coolers. [There is an extensive, partial list here](/use-the-network/devices). 
   
 ### What is a Proof-of-Coverage (PoC) Challenge?
 A Challenge requires a small group of hotspots to prove that they are in the location that they say they are.  If they truly are there and online, and within radio distance of each other, then they can hear the "call" and respond as a witness to validate their position.  For a deeper breakdown click here.
