--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -18,7 +18,7 @@ No. The network is only meant devices that use LoRaWAN.
 Anything that sends data via LoRaWAN. This means everything from asset trackers, to soil sensors in farms, to tracking the water level of bottles in water coolers. [There is an extensive, partial list here](/use-the-network/devices). 
   
 ### What is a Proof-of-Coverage (PoC) Challenge?
-A Challenge requires a small group of hotspots to prove that they are in the location that they say they are.  If they truly are there and online, and within radio distance of each other, then they can hear the "call" and respond as a witness to validate their position.  For a deeper breakdown click here.
+A Challenge requires a small group of hotspots to prove that they are in the location that they say they are.  If they truly are there and online, and within radio distance of each other, then they can hear the "call" and respond as a witness to validate their position.  For a deeper breakdown [click here](/blockchain/proof-of-coverage/#proof-of-coverage).
 
 ### What if I'm in a rural area, or the only hotspot in my area?  Can I still earn rewards?
 Hotspots earn by providing and validating network coverage provided by other hotspots. This includes both sending a challenge over the internet or validating coverage of other hotspots within range. 
