--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -23,7 +23,7 @@ A Challenge requires a small group of hotspots to prove that they are in the loc
 ### What if I'm in a rural area, or the only hotspot in my area?  Can I still earn rewards?
 Hotspots earn by providing and validating network coverage provided by other hotspots. This includes both sending a challenge over the internet or validating coverage of other hotspots within range. 
  
-It's best to have at least 1 or 2 other hotspots within radio range of you, so that you can participate in PoC Challenges to earn rewards.  If you are the only hotspot in your area, you can still earn tokens if a device uses your signal and by initiating the Challenges, though.  Tokens are distributed based on these economics.
+It's best to have at least one or two other hotspots within radio range of you so that you can participate in PoC Challenges to earn rewards a higher rate of HNT.  If you are the only Hotspot in your area, you can still earn HNT if a device uses your Hotspots and by initiating the Challenges.  Tokens are distributed based on these economics.
  
 ### Can I have 2 or 3 hotspots at my house?
 If hotspots are too close (within 300-350 meters or so) they will end up not being able to witness each other and may compete with each other for Challenges. Their overall participation in Proof-of-Coverage would be impacted also, since rewards are also density based.  It's better to have them spaced out, at least a few houses or blocks away, to broaden network coverage.  
