--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -25,7 +25,7 @@ Hotspots earn by providing and validating network coverage provided by other hot
  
 It's best to have at least one or two other hotspots within radio range of you so that you can participate in PoC Challenges to earn rewards a higher rate of HNT.  If you are the only Hotspot in your area, you can still earn HNT if a device uses your Hotspots and by initiating the Challenges.  Tokens are distributed based on these economics.
  
-### Can I have 2 or 3 hotspots at my house?
+### Can I have more than one Hotspot at the same location?
 If hotspots are too close (within 300-350 meters or so) they will end up not being able to witness each other and may compete with each other for Challenges. Their overall participation in Proof-of-Coverage would be impacted also, since rewards are also density based.  It's better to have them spaced out, at least a few houses or blocks away, to broaden network coverage.  
  
 ### How do I earn Helium?
