--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -29,7 +29,7 @@ It's best to have at least one or two other hotspots within radio range of you s
 If Hotspots are too close - less than 300 meters - they will not be eligible twitness each other as part of POC challenges and may compete with each other for challenges. Their overall participation in Proof-of-Coverage would be impacted also, since rewards are also density based.  Proof of coverage rewards good, wide coverage. You'll earn more HNT if you do this. 
  
 ### How do I earn Helium?
-Once set up and connected to the internet, there are 5 ways your hotspot earns (with no additional work from you!):
+Once deployed via the Helium Wallet and fully synced, there are five ways your Hotspot earns HNT.  A full list of [mining rewards can be found here](/blockchain/mining). 
  
 - When a device sends information over the network using your hotspot
 - By initiating PoC Challenges over the internet
